--- a/openidl-ui-workspace/package.json
+++ b/openidl-ui-workspace/package.json
@@ -6,13 +6,13 @@
 		"build": "ng build",
 		"test": "ng test",
 		"watch": "ng build openidl-common-ui --watch --configuration development",
+		"start:regulator": "node projects/openidl-ui/server/index.js",
+		"serve:regulator": "ng serve openidl-ui --proxy-config proxy.conf.json",
+		"start:carrier": "node projects/openidl-carrier-ui/server/index.js",
+		"serve:carrier": "ng serve openidl-carrier-ui --proxy-config proxy.conf.json",
 		"build:common": "ng build openidl-common-ui",
-		"start:ui": "node projects/openidl-ui/server/index.js",
-		"start:ui2": "node projects/openidl-carrier-ui/server/index.js",
-		"build:ui": "ng build openidl-ui",
-		"build:ui2": "ng build openidl-carrier-ui",
-		"serve:ui": "ng serve openidl-ui --proxy-config proxy.conf.json",
-		"serve:ui2": "ng serve openidl-carrier-ui --proxy-config proxy.conf.json"
+		"build:regulator": "ng build openidl-ui",
+		"build:carrier": "ng build openidl-carrier-ui"
 	},
 	"private": true,
 	"dependencies": {
