--- a/openidl-ui-workspace/package.json
+++ b/openidl-ui-workspace/package.json
@@ -8,11 +8,11 @@
 		"watch": "ng build openidl-common-ui --watch --configuration development",
 		"start:aais": "node projects/openidl-ui/server/index.js",
 		"serve:aais": "ng serve openidl-ui --proxy-config proxy.conf.json",
-		"start:member": "node projects/openidl-carrier-ui/server/index.js",
-		"serve:member": "ng serve openidl-carrier-ui --proxy-config proxy.conf.json",
+		"start:carrier": "node projects/openidl-carrier-ui/server/index.js",
+		"serve:carrier": "ng serve openidl-carrier-ui --proxy-config proxy.conf.json",
 		"build:common": "ng build openidl-common-ui",
 		"build:aais": "ng build openidl-ui",
-		"build:member": "ng build openidl-carrier-ui"
+		"build:carrier": "ng build openidl-carrier-ui"
 	},
 	"private": true,
 	"dependencies": {
