--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openidl-org/openidl-common-lib",
-  "version": "0.3.1",
+  "version": "0.3.7",
   "private": false,
   "main": "index.js",
   "publishConfig": {
@@ -39,6 +39,7 @@
     "log4js": "4.3.2",
     "mongodb": "3.6.7",
     "nconf": "^0.10.0",
+    "node-vault":"^0.9.22",
     "passport": "^0.4.0",
     "passport-cognito": "^0.2.2",
     "request-promise": "^4.2.2",
