--- a/openidl-k8s/charts/openidl-insurance-data-manager/templates/deployment.yml
+++ b/openidl-k8s/charts/openidl-insurance-data-manager/templates/deployment.yml
@@ -21,6 +21,16 @@ spec:
       labels:
         {{- include "openidl-insurance-data-manager.selectorLabels" . | nindent 8 }}
     spec:
+      {{- if .Values.global.minikubehostip }}
+      hostAliases:
+      - ip: {{ .Values.global.minikubehostip }}
+        hostnames:
+        - "peer0.aais.example.com"
+        - "peer0.analytics.example.com"
+        - "peer0.carrier.example.com"
+        - "orderer.example.com"
+        - "host.minikube.internal"
+      {{- end }}
       # {{- with .Values.imagePullSecrets }}
       # imagePullSecrets:
       #   {{- toYaml . | nindent 8 }}
