--- a/openidl-utilities/package.json
+++ b/openidl-utilities/package.json
@@ -35,7 +35,8 @@
         "@cloudant/cloudant": "^3.0.1",
         "jsonwebtoken": "^8.5.1",
         "jsrsasign": "^10.3.0",
-        "fs-extra": "7.0.1"
+        "fs-extra": "7.0.1",
+        "js-yaml": "^3.12.0"
     },
     "engines": {
         "node": "14.17.x",
