--- a/openidl-k8s/.gitignore
+++ b/openidl-k8s/.gitignore
@@ -1,3 +1,6 @@
 charts/openidl-secrets/config-aais/**
 charts/openidl-secrets/config-carrier/**
 charts/openidl-secrets/config-analytics/**
+charts/openidl-secrets/config-aais-dev/**
+charts/openidl-secrets/config-carrier-dev/**
+charts/openidl-secrets/config-analytics-dev/**
