--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openidl-org/openidl-common-lib",
-  "version": "0.5.17",
+  "version": "0.5.21",
   "private": false,
   "main": "index.js",
   "publishConfig": {
@@ -47,10 +47,16 @@
     "eslint-plugin-import": "^2.13.0",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.12",
-    "nyc": "15.0.0"
+    "nyc": "15.0.0",
+    "husky": "^4.3.8"
   },
   "resolutions": {
     "fabric-client/**/jsrsasign": "10.2.0",
     "fabric-ca-client/**/jsrsasign": "10.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm version --force --no-git-tag-version patch && git add package.json package-lock.json"
+    }
   }
 }
